--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pg": "^8.8.0"
   }
 }
