--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.17.1",
     "knex": "^0.95.6",
     "mysql": "^2.18.1",
