--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "cda-knex-table-migrations-solution",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js",
     "dev": "npx nodemon index.js",
     "migrate": "knex migrate:latest",
     "migrate:down": "knex migrate:down",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "knex": "^0.95.6",
     "mysql": "^2.18.1",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "pm2": "^5.2.0"
   }
 }
