Update start/restart/stop Express scripts

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,9 @@
   "name": "cda-knex-table-migrations-solution",
   "version": "1.0.0",
   "scripts": {
-    "start": "pm2 start index.js -f",
+    "start": "pm2 start index.js --name api",
+    "restart": "pm2 restart api",
+    "stop": "pm2 stop api",
     "dev": "npx nodemon index.js",
     "migrate": "knex migrate:latest",
     "migrate:down": "knex migrate:down",
